@@ -1,6 +1,8 @@
 package org.folio.bulkops.processor.marc;
 
 import java.util.regex.Pattern;
+
+import lombok.extern.log4j.Log4j2;
 import org.apache.commons.lang3.StringUtils;
 import org.folio.bulkops.domain.dto.BulkOperationMarcRule;
 import org.folio.bulkops.domain.dto.UpdateActionType;
@@ -8,6 +10,9 @@ import org.folio.bulkops.exception.BadRequestException;
 import org.folio.bulkops.exception.RuleValidationException;
 import org.springframework.stereotype.Component;
 
+import static java.util.Objects.isNull;
+
+@Log4j2
 @Component
 public class MarcRulesValidator {
 
@@ -41,7 +46,7 @@ public class MarcRulesValidator {
     if (rule.getActions() == null || rule.getActions().isEmpty()) {
       return;
     }
-    var firstAction = rule.getActions().get(0).getName();
+    var firstAction = rule.getActions().getFirst().getName();
     if (UpdateActionType.REMOVE_FIELD.equals(firstAction)) {
       validateRemoveFieldRequiredFields(rule);
     } else if (UpdateActionType.REMOVE_SUBFIELD.equals(firstAction)) {
@@ -53,10 +58,11 @@ public class MarcRulesValidator {
     if (StringUtils.isEmpty(rule.getTag())) {
       throw new BadRequestException(String.format(MISSING_REQUIRED_FIELD_MESSAGE, "tag"));
     }
-    if (StringUtils.isEmpty(rule.getInd1())) {
+    if (isNull(rule.getInd1())) {
+      log.error("Missing required field ind1 for rule: {}", rule);
       throw new BadRequestException(String.format(MISSING_REQUIRED_FIELD_MESSAGE, "ind1"));
     }
-    if (StringUtils.isEmpty(rule.getInd2())) {
+    if (isNull(rule.getInd2())) {
       throw new BadRequestException(String.format(MISSING_REQUIRED_FIELD_MESSAGE, "ind2"));
     }
   }
